1.0.5:
	- Added documents are scrolled to
	- DocumentProperties shows correct fields depending on document type
	- Add google scholar web link
	- Add PubMed web link
	- Allow specific selection of different web links
	- Add builtin generic document icon
	- Paste BibTeX button in document properties
	- Clear button in document properties
	- Editable list view
	- Fix crash in tagging 
	- Revised icon view
	- Pick up when citebase gives us a doi: in the URL field
	- Add preferences options for crossref username/password
	- Remove preferences options for crossref path + dx.doi.org path
	- Metadata plugins (C++ or python)
	- DOI->Pubmed resolver (Simon Greenhill)
	- Make multiple-tag filtering AND instead of OR
	- Fix losing bibtex fields in import (Bug 158581)
	- Fix missing some fields in getArxiv (Bug 158815)
	- Use gtkmm 2.12 IconView tooltip support if available
	- Add online/offline indicator in statusbar
	- Change sizing options of icon view to work around Gnome 2.20
	- Use filename as title when adding files without metadata
	- Make the extras store case insensitive on the key: multiple
	  fields differing only in case are no longer allowed (Alexey Balmashnov)
	- Use the 'url' extra field for web linking (Alexey Balmashnov)
	- Handle multiple keyword fields in import (Alexey Balmashnov)
	- Include doi field in bibtex export
	- Fix generating thumbnails for non-pdf files

1.0.4:
	- Fix import in non-UTF8 locales
	- Tags exported as "keywords" bibtex field
	- Add clear icon to search entry
	- Remember window size
	- Tags sorted by name
	- Tooltips in icon view
	- German translation (Joachim Sauer)
	- Don't add .svn,CVS,.bib,.reflib when adding folder
	- Spanish translation (Mario César Señoranis Ayala)
	- Fixes for 64 bit architecture
	- Remove "Add Tag" dialog (Eric Lesh)
	- Add statusbar, replace progressdialog with progressbar
		in statusbar.
	- Prompt user to resolve duplicated files
	- Update bibutils to 3.32
	- Generate thumbnails for files on NFS mounts